# otus_lesson_1

./: .gitignore  .travis.yml  CMakeLists.txt  Lesson_1  lib.cpp  main.cpp  version.h
